force-app/main/default/objects/RE_Resource_Taxonomy__c/RE_Resource_Taxonomy__c.object-meta.xml
<CustomObject>
    <description>This Object is Junction between Resource and Taxonomy.</description>
    <label>Resource Taxonomy</label>
    <nameField>
        <displayFormat>RT-{0000000000}</displayFormat>
        <label>Resource Taxonomy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Taxonomy</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>