force-app/main/default/objects/RE_Resource_Taxonomy__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>