force-app/main/default/objects/RE_Resource_Taxonomy__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is use to store the Resource.</description>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>ResourceTaxonomys</relationshipLabel>
    <relationshipName>ResourceTaxonomys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>