force-app/main/default/objects/RE_Resource_Taxonomy__c/fields/Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is use to store Taxonomy.</description>
    <label>Taxonomy</label>
    <referenceTo>RE_Taxonomy__c</referenceTo>
    <relationshipLabel>ResourceTaxonomys</relationshipLabel>
    <relationshipName>ResourceTaxonomys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>